[gd_scene load_steps=40 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://kong.tscn" type="PackedScene" id=2]
[ext_resource path="res://Area2D.gd" type="Script" id=3]
[ext_resource path="res://assets/characters/Heart.png" type="Texture" id=4]
[ext_resource path="res://tilemap/ice mountain.png" type="Texture" id=5]
[ext_resource path="res://Backround/gunung 1.png" type="Texture" id=6]
[ext_resource path="res://Backround/gunung 2.png" type="Texture" id=7]
[ext_resource path="res://assets/characters/Half_heart.png" type="Texture" id=8]
[ext_resource path="res://CollisionShape2D.gd" type="Script" id=9]
[ext_resource path="res://Backround/panel.png" type="Texture" id=10]
[ext_resource path="res://Backround/Border.png" type="Texture" id=11]
[ext_resource path="res://ExitButton.gd" type="Script" id=12]
[ext_resource path="res://LosePopUp.gd" type="Script" id=13]
[ext_resource path="res://Dimentional Mountain.gd" type="Script" id=14]
[ext_resource path="res://Backround/WinPanel.png" type="Texture" id=15]
[ext_resource path="res://WinPopUp.gd" type="Script" id=16]

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 32, 0, 32, 16, 16, 32, 0, 16, 0, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 0, 0, 32, 32, 32, 64, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=21]
0/name = "ice mountain.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 15 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "ice mountain.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 0, 32, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 16 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "ice mountain.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 32, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 17 )
2/shape_one_way = true
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "ice mountain.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 0, 32, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 18 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "ice mountain.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 64, 0, 32, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 19 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "ice mountain.png 5"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "ice mountain.png 6"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 32, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 20 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "ice mountain.png 7"
7/texture = ExtResource( 5 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 160, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "ice mountain.png 8"
8/texture = ExtResource( 5 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 160, 32, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "ice mountain.png 9"
9/texture = ExtResource( 5 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 96, 48, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "ice mountain.png 10"
10/texture = ExtResource( 5 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 64, 128, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "ice mountain.png 11"
11/texture = ExtResource( 5 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 64, 96, 32, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 22 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 2037, 12.75 )

[sub_resource type="AtlasTexture" id=11]
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="StyleBoxTexture" id=24]

[sub_resource type="StyleBoxTexture" id=25]

[sub_resource type="StyleBoxTexture" id=26]

[sub_resource type="StyleBoxTexture" id=27]

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 31.4421, 15 )
margin_left = 5.15197
margin_right = 4.43642
margin_top = 5.00886
margin_bottom = 3.86398

[sub_resource type="StyleBoxTexture" id=28]

[sub_resource type="StyleBoxTexture" id=29]

[sub_resource type="StyleBoxTexture" id=30]

[sub_resource type="StyleBoxTexture" id=31]

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 31, 23.75 )

[node name="Level3" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 14 )

[node name="Tilemap" type="TileMap" parent="."]
tile_set = SubResource( 21 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65539, 0, 0, 65568, 3, 0, 65569, 3, 0, 65570, 3, 0, 131074, 0, 0, 131076, 0, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131084, 536870913, 0, 131085, 536870915, 0, 131086, 536870915, 0, 131087, 536870915, 0, 131088, 536870915, 0, 131089, 536870915, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 131101, 3, 0, 131102, 3, 0, 131103, 3, 0, 131106, 3, 0, 131107, 3, 0, 131108, 3, 0, 196619, 536870913, 0, 196629, 3, 0, 196630, 3, 0, 196631, 3, 0, 196644, 3, 0, 196645, 3, 0, 327677, 3, 0, 327678, 3, 0, 327679, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 536870915, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262182, 3, 0, 262183, 3, 0, 262184, 3, 0, 262185, 3, 0, 262186, 3, 0, 262187, 3, 0, 262188, 3, 0, 262189, 3, 0, 262190, 3, 0, 262191, 3, 0, 262192, 3, 0, 262193, 3, 0, 262194, 3, 0, 262195, 3, 0, 262196, 3, 0, 262197, 3, 0, 262198, 3, 0, 262199, 3, 0, 262200, 3, 0, 262201, 3, 0, 262202, 3, 0, 262203, 3, 0, 262204, 3, 0, 262205, 3, 0, 262206, 3, 0, 262207, 3, 0, 262208, 3, 0, 262209, 3, 0, 262210, 3, 0, 262211, 3, 0, 262212, 3, 0, 262213, 3, 0, 262214, 3, 0, 262215, 3, 0, 262216, 3, 0, 262217, 3, 0, 262218, 3, 0, 262219, 3, 0, 262220, 3, 0, 262221, 3, 0, 262222, 3, 0, 262223, 3, 0, 262224, 3, 0, 262225, 3, 0, 262226, 3, 0, 262227, 3, 0, 262228, 3, 0, 262229, 3, 0, 262230, 3, 0, 262231, 3, 0, 262232, 3, 0, 262233, 3, 0, 262234, 3, 0, 262235, 3, 0, 262236, 3, 0, 262237, 3, 0, 262238, 3, 0, 262239, 3, 0, 262240, 3, 0, 262241, 3, 0, 262242, 3, 0, 262243, 3, 0, 262244, 3, 0, 262245, 3, 0, 262246, 3, 0, 262247, 3, 0, 262248, 3, 0, 262249, 3, 0, 262250, 3, 0 )

[node name="Hero" parent="." instance=ExtResource( 1 )]
position = Vector2( 3168, 67 )

[node name="Dead zone" type="Area2D" parent="."]
position = Vector2( 23, -12 )
collision_layer = 8
collision_mask = 5
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dead zone"]
position = Vector2( 1385, 191 )
shape = SubResource( 10 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 42, -33 )
frames = SubResource( 14 )
frame = 1
playing = true

[node name="backround" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="backround"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 1002, 0 )

[node name="Sprite" type="Sprite" parent="backround/ParallaxLayer"]
position = Vector2( -207, 77 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="backround/ParallaxLayer"]
position = Vector2( 284, 75 )
texture = ExtResource( 7 )

[node name="Enemy" type="Node2D" parent="."]

[node name="kong" parent="Enemy" instance=ExtResource( 2 )]
position = Vector2( 280, 93 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 539, 221 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealtBar" type="Control" parent="CanvasLayer"]
margin_left = 1.0
margin_right = 41.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HealtBar"]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HealtBar/HBoxContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/HealtBar"]
margin_right = 32.0
margin_bottom = 32.0
value = 100.0
texture_progress = ExtResource( 8 )

[node name="LosePopUp" type="CenterContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -293.0
margin_right = 56.0
margin_bottom = -199.0
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="CanvasLayer/LosePopUp"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/LosePopUp"]
margin_right = 94.0
margin_bottom = 94.0
texture = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LosePopUp"]
margin_left = 18.0
margin_top = 5.0
margin_right = 76.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="CanvasLayer/LosePopUp/VBoxContainer"]
margin_right = 58.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0.113725, 0.380392, 0.0823529, 1 )
text = "Defeated
"

[node name="Button" type="Button" parent="CanvasLayer/LosePopUp/VBoxContainer"]
margin_top = 35.0
margin_right = 58.0
margin_bottom = 57.8728
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = SubResource( 25 )
custom_styles/focus = SubResource( 26 )
custom_styles/disabled = SubResource( 27 )
custom_styles/normal = SubResource( 23 )
text = "Rerty"

[node name="ExitButton" type="Button" parent="CanvasLayer/LosePopUp/VBoxContainer"]
margin_top = 61.0
margin_right = 58.0
margin_bottom = 83.8728
custom_colors/font_color_disabled = Color( 0.0509804, 0.521569, 0.0470588, 1 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/focus = SubResource( 30 )
custom_styles/disabled = SubResource( 31 )
custom_styles/normal = SubResource( 23 )
text = "Exit"
script = ExtResource( 12 )

[node name="WinPopUp" type="CenterContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = -425.0
margin_right = 77.0
margin_bottom = -265.0
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="CanvasLayer/WinPopUp"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/WinPopUp"]
margin_right = 160.0
margin_bottom = 160.0
texture = ExtResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/WinPopUp"]
margin_left = 53.0
margin_top = 51.0
margin_right = 107.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="CanvasLayer/WinPopUp/VBoxContainer"]
margin_right = 54.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0.113725, 0.380392, 0.0823529, 1 )
text = "VICTORY
"

[node name="ExitButton" type="Button" parent="CanvasLayer/WinPopUp/VBoxContainer"]
margin_top = 35.0
margin_right = 54.0
margin_bottom = 57.8728
custom_colors/font_color_disabled = Color( 0.0509804, 0.521569, 0.0470588, 1 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/focus = SubResource( 30 )
custom_styles/disabled = SubResource( 31 )
custom_styles/normal = SubResource( 23 )
text = "Exit"
script = ExtResource( 12 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3390, 111.75 )
shape = SubResource( 32 )

[connection signal="hero_win" from="." to="CanvasLayer/WinPopUp" method="_on_Level3_hero_win"]
[connection signal="hero_dead" from="Hero" to="CanvasLayer/LosePopUp" method="_on_Hero_hero_dead"]
[connection signal="hero_update_healt" from="Hero" to="Dead zone" method="_on_Hero_hero_update_healt"]
[connection signal="body_entered" from="Dead zone" to="Dead zone" method="_on_Area2D_body_entered"]
[connection signal="pressed" from="CanvasLayer/LosePopUp/VBoxContainer/Button" to="CanvasLayer/LosePopUp" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/LosePopUp/VBoxContainer/ExitButton" to="CanvasLayer/LosePopUp/VBoxContainer/ExitButton" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/WinPopUp/VBoxContainer/ExitButton" to="CanvasLayer/WinPopUp/VBoxContainer/ExitButton" method="_on_ExitButton_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
